--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -1,7 +1,9 @@
 name: tweet
 on:
-  release:
-    types: [published]
+  tweet_dispatch:
+    push:
+      tags:
+        - 'v[0-9]+.[0-9]+.[0-9]+'
 defaults:
   run: { shell: bash }
 
