--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -2,6 +2,8 @@ name: tweet
 on:
   workflow_dispatch:
     push:
+      branch:
+        - main
       tags:
         - 'v[0-9]+.[0-9]+.[0-9]+'
 defaults:
