Fix typo in workflow file
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -2,7 +2,7 @@ name: tweet
 on:
   workflow_dispatch:
     push:
-      branch:
+      branches:
         - main
       tags:
         - 'v[0-9]+.[0-9]+.[0-9]+'
