--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -2,10 +2,9 @@ name: tweet
 on:
   workflow_dispatch:
     push:
-      branches:
-        - main
       tags:
-        - 'v[0-9]+.[0-9]+.[0-9]+'
+        - 'release/v[0-9]+.[0-9]+.[0-9]+'
+        - 'refs/tags/[0-9]+.[0-9]+.[0-9]+'
 defaults:
   run: { shell: bash }
 
