Remove workflow_dispatch
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -2,6 +2,8 @@ name: tweet
 on:
   push:
     tags:
+      - 'release/v[0-9]+.[0-9]+.[0-9]+'
+      - 'refs/tags/[0-9]+.[0-9]+.[0-9]+'
 defaults:
   run: { shell: bash }
 
