--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -3,7 +3,7 @@ on:
   push:
     tags:
       - 'release/v[0-9]+.[0-9]+.[0-9]+'
-      - 'refs/tags/[0-9]+.[0-9]+.[0-9]+'
+      - 'refs/tags/v[0-9]+.[0-9]+.[0-9]+'
 defaults:
   run: { shell: bash }
 
