--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -1,8 +1,13 @@
 name: tweet
+
+
 on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
+    release:
+      types: [published]
 
 defaults:
   run: { shell: bash }
