--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -32,6 +32,10 @@ jobs:
           {body}
         CONTEXT_GITHUB: ${{ toJson(github) }}
         CONTEXT_SECRETS: ${{ toJson(secrets) }}
+        PAYLOAD: > 
+          gh api
+          -HF "Accept: application/vnd.github+json"
+          /repos/{owner}/{repo}/releases/tags/{tag}
       run: |
         pip install -Uqr .github/scripts/requirements.txt
         python .github/scripts/build-tweet.py
