--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,11 @@ jobs:
     steps:
       - checkout
       - run: |
+          echo "PR repo name: $CIRCLE_PR_REPONAME"
           echo "Tag: $CIRCLE_TAG"
           echo "URL: $CIRCLE_REPOSITORY_URL"
           echo "Task data: $CIRCLE_INTERNAL_TASK_DATA"
+          echo "Project repo name: $CIRCLE_PROJECT_REPONAME"
 
 
 workflows:
