--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           echo "URL: $CIRCLE_REPOSITORY_URL"
           echo "Task data: $CIRCLE_INTERNAL_TASK_DATA"
           echo "Project repo name: $CIRCLE_PROJECT_REPONAME"
-          echo "Pipeline project url: $<< pipeline.project.git_url >>"
+          echo "Pipeline project url: << pipeline.project.git_url >>"
 
 
 workflows:
