--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,12 @@ executors:
           username: $DOCKER_HUB_USER
           password: $DOCKER_HUB_PASSWORD
     resource_class: small
+    environment:
+      REPO: $CIRCLE_PROJECT_REPONAME
+      PAYLOAD: |
+        tag_name: $CIRCLE_TAG
+        html_url: << pipeline.project.git_url >>
+        body: "Lots of exciting changes!"
 jobs:
   tag-release-announcement:
 
