--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   my-custom-executor:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/python:stable
         auth:
           # ensure you have first added these secrets
           # visit app.circleci.com/settings/project/github/Sceptre/tweetrel-test/environment-variables
