--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 executors:
   my-custom-executor:
     docker:
-      - image: cimg/python
+      - image: cimg/python:3.10.7
         auth:
           # ensure you have first added these secrets
           # visit app.circleci.com/settings/project/github/Sceptre/tweetrel-test/environment-variables
