Remove dev/alpah version of orb
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: '2.1'
 orbs:
-  tweeter-orb: 'jollof-guy/tweeter-orb@dev:alpha'
+  tweeter-orb: 'jollof-guy/tweeter-orb@main'
 workflows:
   use-my-orb:
     jobs:
