Reference API key and token
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,8 @@ workflows:
   use-my-orb:
     jobs:
       - tweeter-orb/tweet:
-          key: API_KEY
-          secret: API_SECRET
+          key: $API_KEY
+          secret: $API_SECRET
           tweet: |
             Announcing a new $CIRCLE_PROJECT_REPONAME release: $CIRCLE_TAG
             Find out more: << pipeline.project.git_url >>
