--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,22 @@
-version: '2.1'
+orbs:
+  twitter-orb: jakousa/twitter-orb@1.0.1
 
-executors:
-  my-custom-executor:
+jobs:
+  example-job:
     docker:
+      # replace with your preferred image
       - image: cimg/base:stable
-        auth:
-          # ensure you have first added these secrets
-          # visit app.circleci.com/settings/project/github/Sceptre/tweetrel-test/environment-variables
-          username: $DOCKER_HUB_USER
-          password: $DOCKER_HUB_PASSWORD
-    resource_class: small
-
-jobs: 
-  tag-release-announcement:
-    executor: my-custom-executor
     steps:
-      - checkout
-      - run: |
-          echo $API_KEY
-          echo $API_SECRET
+      - twitter-orb/tweet:
+          access_secret: $API_KEY
+          access_token: $API_SECRET
+          consumer_key: $ACCESS_TOKEN
+          consumer_secret: $TOKEN_SECRET
+          contents: |
+            $CIRCLE_PROJECT_REPONAME has released $CIRCLE_TAG 
+            Check it out here: << pipeline.project.git_url >>
 
 workflows:
-  my-custom-workflow:
+  example-workflow:
     jobs:
-      - tag-release-announcement
+      - example-job
