--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,11 @@ version: '2.1'
 orbs:
   twitter-orb: jakousa/twitter-orb@1.0.1
 
-executors:
-    twurl:
-        description: |
-            Executor with twurl.
-        docker:
-            - image: jakousa/twurl:latest
-
 jobs:
   example-job:
     docker:
       # replace with your preferred image
-      - image: cimg/base:stable
+      - image: jakousa/twurl:latest
     steps:
       - twitter-orb/tweet:
           access_secret: API_KEY
@@ -22,7 +15,7 @@ jobs:
           consumer_key: ACCESS_TOKEN
           consumer_secret: TOKEN_SECRET
           contents: |
-            $CIRCLE_PROJECT_REPONAME has released $CIRCLE_TAG 
+            CIRCLE_PROJECT_REPONAME has released CIRCLE_TAG 
             Check it out here: << pipeline.project.git_url >>
 
 workflows:
