--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           consumer_key: ACCESS_TOKEN
           consumer_secret: TOKEN_SECRET
           contents: |
-            CIRCLE_PROJECT_REPONAME has released CIRCLE_TAG 
+            $CIRCLE_PROJECT_REPONAME has released $CIRCLE_TAG 
             Check it out here: << pipeline.project.git_url >>
 
 workflows:
