--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,13 @@ jobs:
     docker:
       # replace with your preferred image
       - image: jakousa/twurl:latest
+    resource_class: small
     steps:
       - twitter-orb/tweet:
-          access_secret: API_KEY
-          access_token: API_SECRET
-          consumer_key: ACCESS_TOKEN
-          consumer_secret: TOKEN_SECRET
+          access_secret: TOKEN_SECRET
+          access_token: ACCESS_TOKEN
+          consumer_key: API_KEY
+          consumer_secret: API_SECRET
           contents: |
             $CIRCLE_PROJECT_REPONAME has released $CIRCLE_TAG 
             Check it out here: << pipeline.project.git_url >>
