--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
+    environment:
+      REPONAME: $CIRCLE_PROJECT_REPONAME
     steps:
       - twitter-orb/tweet:
           access_secret: TOKEN_SECRET
@@ -16,8 +18,8 @@ jobs:
           consumer_key: API_KEY
           consumer_secret: API_SECRET
           contents: |
-            Check out the latest release of CIRCLE_PROJECT_USERNAME here: 
-              << pipeline.project.git_url >>
+            $REPONAME just released << pipeline.git.tag >>. Check it out!:
+            << pipeline.project.git_url >>
 
 workflows:
   example-workflow:
