--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ jobs:
       # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
-    environment:
-      REPONAME: $CIRCLE_PROJECT_REPONAME
     steps:
       - twitter-orb/tweet:
           access_secret: TOKEN_SECRET
@@ -18,7 +16,7 @@ jobs:
           consumer_key: API_KEY
           consumer_secret: API_SECRET
           contents: |
-            $REPONAME just released << pipeline.git.tag >>. Check it out!:
+            ${{ CIRCLE_PROJECT_REPONAME }} just released << pipeline.git.tag >>. Check it out!:
             << pipeline.project.git_url >>
 
 workflows:
