--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,15 +9,15 @@ jobs:
       # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
+    environment:
+      compiled_tweet: $CIRCLE_PROJECT_REPONAME
     steps:
       - twitter-orb/tweet:
           access_secret: TOKEN_SECRET
           access_token: ACCESS_TOKEN
           consumer_key: API_KEY
           consumer_secret: API_SECRET
-          contents: |
-            ${{ CIRCLE_PROJECT_REPONAME }} just released << pipeline.git.tag >>. Check it out!:
-            << pipeline.project.git_url >>
+          contents: $compiled_tweet
 
 workflows:
   example-workflow:
