--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,16 +11,15 @@ jobs:
     resource_class: small
     environment:
       compiled_tweet: $CIRCLE_PROJECT_REPONAME
-    steps:
-      - export COMPILED_TWEET="${CIRCLE_PROJECT_REPONAME} has released << pipeline.git.tag >>. Check it out! << pipeline.git.url >>"
+    steps:      
       - twitter-orb/tweet:
           access_secret: TOKEN_SECRET
           access_token: ACCESS_TOKEN
           consumer_key: API_KEY
           consumer_secret: API_SECRET
-          contents: $COMPILED_TWEET
+          contents: "Sceptre has released << pipeline.git.tag >> << pipeline.project.git_url >>"
 
 workflows:
   example-workflow:
-    jobs:
+    jobs:      
       - example-job
