Add tag filter to workflow
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,3 +25,12 @@ workflows:
   example-workflow:
     jobs:      
       - example-job
+  
+  pointers:
+    jobs:
+      - prod:
+          filters:
+            tags:
+              only: ".+"
+            branches:
+              only: main
