Update job reference
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ workflows:
   
   pointers:
     jobs:
-      - prod:
+      - example-job:
           filters:
             tags:
               only: ".+"
