Update workflow to only pointer
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,9 @@ jobs:
             << pipeline.project.git_url >>
 
 workflows:
-  example-workflow:
-    jobs:      
-      - example-job
+  # example-workflow:
+  #   jobs:      
+  #     - example-job
   
   pointers:
     jobs:
