--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ workflows:
       - example-job:
           filters:
             tags:
-              only: ".+"
+              only:
+                - /.*/
             branches:
               only: main
