Update tag filter
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,6 @@ workflows:
       - example-job:
           filters:
             tags:
-              only:
-                - /.*/
+              only: /^v.*/
             branches:
               only: main
