Ignore branches in workflow
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,4 @@ workflows:
             tags:
               only: /v.*/
             branches:
-              only: main
+              ignore: /.*/
