--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,14 +18,11 @@ jobs:
           consumer_key: API_KEY
           consumer_secret: API_SECRET
           contents: |
+            echo $ACCESS_TOKEN
             (echo $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME) has released << pipeline.git.tag >>:
             << pipeline.project.git_url >>
 
-workflows:
-  # example-workflow:
-  #   jobs:      
-  #     - example-job
-  
+workflows:  
   pointers:
     jobs:
       - example-job:
