--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ workflows:
   pointers:
     jobs:
       - example-job:
-          context: sceptreorg-twitter
+          context: erica-twitter
           filters:
             tags:
               only: /v.*/
