--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,8 +9,6 @@ jobs:
       # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
-    environment:
-      compiled_tweet: $CIRCLE_PROJECT_REPONAME
     steps:      
       - twitter-orb/tweet:
           access_secret: TOKEN_SECRET
@@ -19,7 +17,7 @@ jobs:
           consumer_secret: API_SECRET
           contents: |
             (echo $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME) has released << pipeline.git.tag >>:
-            << pipeline.project.git_url >>
+            << pipeline.project.git_url >>/releases/tag/<< pipeline.git.tag >>
 
 workflows:  
   pointers:
