--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,15 @@ orbs:
 jobs:
   example-job:
     docker:
+      # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
     steps:      
       - twitter-orb/tweet:
+          access_secret: $TOKEN_SECRET
+          access_token: $ACCESS_TOKEN
+          consumer_key: $API_KEY
+          consumer_secret: $API_SECRET
           contents: |
             (echo $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME) has released << pipeline.git.tag >>:
             << pipeline.project.git_url >>/releases/tag/<< pipeline.git.tag >>
@@ -18,7 +23,7 @@ workflows:
   pointers:
     jobs:
       - example-job:
-          context: erica-twitter
+          context: sceptreorg-twitter
           filters:
             tags:
               only: /v.*/
