--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,26 +6,25 @@ orbs:
 jobs:
   example-job:
     docker:
-      # replace with your preferred image
       - image: jakousa/twurl:latest
     resource_class: small
     steps:      
       - twitter-orb/tweet:
-          access_secret: $TOKEN_SECRET
-          access_token: $ACCESS_TOKEN
-          consumer_key: $API_KEY
-          consumer_secret: $API_SECRET
+          access_secret: TOKEN_SECRET
+          access_token: ACCESS_TOKEN
+          consumer_key: API_KEY
+          consumer_secret: API_SECRET
           contents: |
             (echo $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME) has released << pipeline.git.tag >>:
             << pipeline.project.git_url >>/releases/tag/<< pipeline.git.tag >>
 
 workflows:  
-  pointers:
+  announcements:
     jobs:
       - example-job:
           context: sceptreorg-twitter
           filters:
             tags:
-              only: /v.*/
+              only: /v.*/^v[0-9]+\.[0-9]+\.[0-9]+/
             branches:
-              ignore: /.*/
+              ignore: /[^(main)]/
