--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ workflows:
             tags:
               only: /^v[0-9]+\.[0-9]+\.[0-9]+/
             branches:
-              ignore: /[^(main)]/
+              ignore: /.*/
