Test branch filter
Signed-off-by: Erica Brauer <ericabrauer1@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
 
 workflows:  
   announcements:
+    when:
+      equal: [ main, << pipeline.git.branch >> ]
     jobs:
       - twitter:
           context: erica-twitter
