--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,9 @@ jobs:
 workflows:  
   announcements:
     when:
-      equal: [ main, << pipeline.git.branch >> ]
+      and:
+        equal: [ main, << pipeline.git.branch >> ]
+        matches: [ /^v[0-9]+\.[0-9]+\.[0-9]+/, << pipeline.git.tag >> ] 
     jobs:
       - twitter:
           context: erica-twitter
-          filters:
-            tags:
-              only: /^v[0-9]+\.[0-9]+\.[0-9]+/
-            branches:
-              ignore: /.*/
