--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ workflows:
       and:
         - equal: [main, << pipeline.git.branch >>]
         - matches:
-            pattern: "/^v[0-9]+\.[0-9]+\.[0-9]+/"
+            pattern: "^v[0-9]+\.[0-9]+\.[0-9]+"
             value: << pipeline.git.tag >> 
     jobs:
       - twitter:
